[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/ui/StartMenu.gd" type="Script" id=1]
[ext_resource path="res://static/postman_title.png" type="Texture" id=3]
[ext_resource path="res://src/ui/default_theme.tres" type="Theme" id=4]
[ext_resource path="res://static/note_icon.png" type="Texture" id=5]
[ext_resource path="res://static/sfx_icon.png" type="Texture" id=6]

[node name="StartMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 1 )

[node name="Titlescreen" type="Sprite" parent="."]
texture = ExtResource( 3 )
centered = false

[node name="PlayButton" type="Button" parent="."]
margin_left = 120.0
margin_top = 75.0
margin_right = 200.0
margin_bottom = 90.0
focus_mode = 0
enabled_focus_mode = 0
text = "PLAY"

[node name="Node2D" type="Node2D" parent="."]

[node name="MusicSlider" type="HSlider" parent="Node2D"]
margin_left = 152.0
margin_top = 138.0
margin_right = 184.0
margin_bottom = 147.0
focus_mode = 0
min_value = -30.0
max_value = 0.0
value = -10.0

[node name="SFXSlider" type="HSlider" parent="Node2D"]
margin_left = 152.0
margin_top = 154.0
margin_right = 184.0
margin_bottom = 163.0
focus_mode = 0
min_value = -30.0
max_value = 0.0
value = -10.0

[node name="NoteIcon" type="Sprite" parent="Node2D"]
position = Vector2( 141.5, 142 )
texture = ExtResource( 5 )

[node name="SfxIcon" type="Sprite" parent="Node2D"]
position = Vector2( 143, 158 )
texture = ExtResource( 6 )

[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="value_changed" from="Node2D/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="value_changed" from="Node2D/SFXSlider" to="." method="_on_SFXSlider_value_changed"]
